testdata/typechecker/error/BinopTest-err8.java
int main() {
            boolean b;
            b = false < 87; // TE
		return 0;
}

